Fixed most of the spacing issues except for the cta section in index.html.

--- a/css/index.css
+++ b/css/index.css
@@ -205,6 +205,7 @@ hr {
 }
 nav {
   background-color: #F2F2F2;
+  background-image: linear-gradient(to bottom, #f2f2f2, #f5f5f5, #f8f8f8, #fcfcfc, #ffffff);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -276,6 +277,14 @@ nav .logo {
 .log-in button a {
   color: white;
   text-decoration: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.log-in button a:hover {
+  color: #0A235C;
 }
 .outside {
   display: block;
@@ -296,7 +305,7 @@ nav .logo {
 }
 @media screen and (max-width: 768px) {
   .nav-list {
-    background-color: #F2F2F2;
+    background-image: linear-gradient(to top, #f2f2f2, #f5f5f5, #f8f8f8, #fcfcfc, #ffffff);
     position: absolute;
     right: 0px;
     height: 88vh;
@@ -446,8 +455,8 @@ nav .logo {
   color: #0A235C;
 }
 .carousel-text-container button a {
-  text-decoration: none;
   color: white;
+  text-decoration: none;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -482,7 +491,15 @@ nav .logo {
   margin-left: 70px;
   margin-right: 75px;
 }
+.intro h3 {
+  color: #0A235C;
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 25px;
+}
 .intro p {
+  font-size: 2rem;
+  line-height: 28px;
   margin-bottom: 80px;
 }
 @media screen and (max-width: 500px) {
@@ -496,24 +513,14 @@ h1 {
   margin-top: 30px;
   margin-bottom: 50px;
 }
-h3 {
-  color: #0A235C;
-  text-align: center;
-  font-size: 2.4rem;
-  margin-bottom: 25px;
-}
 .table-header {
   width: 100%;
 }
 .table-header h2 {
-  font-size: 3rem;
-  text-align: center;
-}
-.table-header h2 {
   color: #0A235C;
   font-size: 2.8rem;
+  margin-bottom: 50px;
   text-align: center;
-  margin-bottom: 40px;
 }
 @media screen and (max-width: 500px) {
   .table-header {
@@ -553,7 +560,7 @@ tr:nth-child(even) {
     margin: -18px;
   }
 }
-@media screen {
+@media screen and (max-width: 500px) {
   .middle-content {
     width: 100%;
   }
@@ -561,6 +568,15 @@ tr:nth-child(even) {
 .start-here-btn {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 50px 0 20px;
+}
+.start-here-btn h2 {
+  color: #0A235C;
+  font-size: 2.4rem;
+  text-align: center;
+  padding-bottom: 30px;
 }
 .start-here-btn button {
   background: #0A235C;
@@ -590,12 +606,24 @@ tr:nth-child(even) {
     margin-top: 30px;
   }
 }
+.start-here-btn button a {
+  color: white;
+  text-decoration: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.start-here-btn button a:hover {
+  color: #0A235C;
+}
 .carousel {
   width: 100%;
   height: 400px;
   position: relative;
   overflow: hidden;
-  margin-top: 16px;
+  margin-top: 50px;
 }
 @media screen and (max-width: 500px) {
   .carousel {
@@ -642,9 +670,28 @@ tr:nth-child(even) {
   }
 }
 .carousel .carousel-caption {
-  display: none;
-  width: 500px;
-  margin-left: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 500px;
+  width: 100%;
+}
+.carousel .carousel-caption .imgs-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.carousel .carousel-caption h3 {
+  color: #0A235C;
+  font-size: 2.2rem;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.carousel .carousel-caption p {
+  font-size: 1.6rem;
+  margin: 10px 0 15px;
 }
 @media screen and (max-width: 500px) {
   .carousel .carousel-caption {
@@ -655,10 +702,9 @@ tr:nth-child(even) {
   }
 }
 .testimonials {
-  margin: 20px 0 ;
+  margin: 80px 0 ;
 }
 .testimonials h1 {
-  font-size: 30px;
   color: #0A235C;
   text-align: center;
 }
