--- a/less/how-it-works.less
+++ b/less/how-it-works.less
@@ -4,8 +4,17 @@
     padding: 30px 0 40px;
     margin-left: 70px;
     margin-right: 75px;
+    
+    h3 {
+      color: @dark-blue;
+    text-align: center;
+    font-size: 2.6rem;
+    margin-bottom: 25px;
+    }
 
     p{
+        font-size: 2rem;
+        line-height: 28px;
         margin-bottom: 80px;
     }
     
@@ -13,33 +22,25 @@
      width: 80%;
       }
   }
-      h1 {
-          color:@dark-blue;
-          text-align: center;
-          margin-top: 30px;
-          margin-bottom: 50px;   
-      }
-      h3 {
-        color: @dark-blue;
-        text-align: center;
-        font-size: 2.4rem;
-        margin-bottom: 25px;
-      }
 
+  h1 {
+    color:@dark-blue;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+  
+ 
       .table-header {
-          width: 100%; h2 {
-              font-size: 3rem;
-              text-align: center;
-          }
-
+          width: 100%; 
 
           h2 {
             color: @dark-blue;
-            font-size:2.8rem;
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
+              font-size: 2.8rem;
+              margin-bottom: 50px;
+              text-align: center;
+          }
 
           @media screen and (max-width: 500px) {
               width: 94%;
@@ -87,18 +88,27 @@
  
 }//How It Works End
 
-
+// Middle content Starts
 .middle-content {
-    // border-bottom: 2px solid @mint;
-  @media screen {
+  
+  @media screen and(max-width: 500px) {
       width: 100%;
   }
 }
 
 .start-here-btn { 
-    display: flex;
-    justify-content: center; 
+    .custom-layout(center, center);
+    flex-direction: column;
+    margin: 50px 0 20px;
+
+    h2 {
+        color: @dark-blue; 
+        font-size: 2.4rem;
+        text-align: center;
+        padding-bottom: 30px;
+    }
     
+
     button {
         .button();
         box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
@@ -110,17 +120,29 @@
         @media screen and (max-width: 500px) {
             width: 20%;
             margin-top: 30px;
+
+        }
+        a {
+            color: white;
+            text-decoration: none;
+            .transition();
+
+            &:hover {
+                color:@dark-blue;
+            }
         }
     }
 }
 
-
+//Carousel Starts
   .carousel {
     width: 100%;
     height: 400px;
     position: relative;
     overflow: hidden;
-    margin-top: 16px;
+    margin-top: 50px;
+
+
     @media screen and (max-width: 500px) {
       width: 80%;
       margin-right: 20px;
@@ -157,10 +179,31 @@
         width: 20%;
       }
     }
+
     .carousel-caption {
-      display: none;
-      width: 500px;
-      margin-left: 300px;
+        .custom-layout(center, center);
+        margin: 0 auto;
+        max-width: 500px;
+        width: 100%;
+
+        .imgs-container {
+            .custom-layout(center, center);
+            margin-bottom: 15px;
+        }
+
+        h3{
+            color: @dark-blue;
+            font-size: 2.2rem;
+            margin-bottom: 10px;
+            text-align: center;
+
+        }
+
+        p{
+            font-size: 1.6rem;
+            margin: 10px 0 15px;
+        }
+
       @media screen and (max-width: 500px) {
         width: 80%;
         margin-right: 20px;
@@ -169,4 +212,4 @@
       }
       
     }
-}
+}//Carousel Ends
