--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,7 @@
 // NAVIGATION START
 nav {
     background-color: @light-grey;
+    background-image: linear-gradient(to bottom, #f2f2f2, #f5f5f5, #f8f8f8, #fcfcfc, #ffffff);
     .custom-layout(space-around, center);
 	.shadow();
     position: fixed;
@@ -52,6 +53,11 @@ nav {
         a{
             color: white;
             text-decoration: none;
+            .transition();
+
+            &:hover {
+                color:@dark-blue;
+            }
         }
     }
 }
@@ -81,7 +87,7 @@ nav {
 
 @media @tablet {
     .nav-list {
-        background-color: @light-grey;
+        background-image: linear-gradient(to top, #f2f2f2, #f5f5f5, #f8f8f8, #fcfcfc, #ffffff);
         position: absolute;
         right: 0px;
         height: 88vh;
