--- a/less/testimonials.less
+++ b/less/testimonials.less
@@ -2,10 +2,9 @@
 
 //Accordion Start Here
 .testimonials {
-    margin: 20px 0 ;
+    margin: 80px 0 ;
 
     h1{
-        font-size: 30px;
         color: @dark-blue ;
         text-align: center;
     }
